--- a/vignettes/cluster_management.Rmd
+++ b/vignettes/cluster_management.Rmd
@@ -2,7 +2,10 @@
 title: "Databricks Cluster Management with `bricksteR`"
 author: "Rafi Kurlansik, Solutions Archcitect, Databricks"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output:
+  rmarkdown::html_vignette:
+    toc: true
+    toc_depth: 4
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
